--- a/src/layout/navigation-menu/NavigationBar.module.css
+++ b/src/layout/navigation-menu/NavigationBar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 60px;
     padding: 0 20px 0 30px;
-    background-color: rgb(9, 0, 41);
+    background-color: rgb(112, 150, 255);
     position: fixed;
     top: 0;
     width: 100%;
@@ -15,7 +15,8 @@
     text-decoration: none;
     cursor: pointer;
     font-weight: 600;
-    height: 60px;
+    height: 50px;
+    margin-top: 5px;
     margin-right: 10px;
 }
 
