--- a/src/features/login/LoginPage.module.css
+++ b/src/features/login/LoginPage.module.css
@@ -28,60 +28,44 @@
     width: 300px;
 }
 
-.loginForm {
+.formulaire {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    color: aliceblue;
-    font-size: 20px;
     margin: auto;
-    margin-top: 60px;
+    width: 90%;
 }
 
-.row {
+.signUpsignIn {
     position: relative;
-    display: flex;
-    flex-direction: row;
-}
-
-.label {
-    margin-top: 40px;
-    width: 200px;
-}
-
-input[type=text] {
-    height: 25px;
-    width: 200px;
-    margin-top: 40px;
-}
-
-/*button*/
-/*formulaire> Buttons like "Save and continue"*/
-.loginButton {
-    position:relative;
     margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
     width: 100%;
-    height:10%;
 }
-  
-.button {
-    color: #e2e4e5;
+
+.setLoginButton {
+    margin: 5px;
+    color: #ffffff;
     padding: 10px 0px;
     border-radius: 10px;
     font-size: 18px;
     align-items: center;
     border:none;
-    float:right;
-    background-color: #2a963c;
+    background-color: #1f1da5;
     width: 205px;
     text-decoration: none;
     text-align: center;
+    font-weight: bold;
 }
-  
-.button:focus {
+
+.setLoginButton2 {
+    margin: 5px;
+    color: #ffffff;
+    padding: 10px 0px;
+    border-radius: 10px;
+    font-size: 18px;
+    align-items: center;
+    border:none;
+    background-color: #5c50ff;
+    width: 205px;
     text-decoration: none;
-    outline: none;
+    text-align: center;
+    font-weight: bold;
 }
