Ajout des catégories

--- a/src/features/mercurial/MercurialPage.module.css
+++ b/src/features/mercurial/MercurialPage.module.css
@@ -1,9 +1,10 @@
 .mercurialContainer {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
     margin:auto;
-    width: 90%;
 }
 
 .mercurial {
