--- a/src/features/mercurial/ListeAllergenesPage.module.css
+++ b/src/features/mercurial/ListeAllergenesPage.module.css
@@ -1,9 +1,10 @@
 .mercurialContainer {
     position: relative;
     display: flex;
-    flex-direction: column;
-    margin:auto;
-    width: 90%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
 }
 
 .mercurial {
