--- a/src/components/mercurial/CategorieAllergenesCard.module.css
+++ b/src/components/mercurial/CategorieAllergenesCard.module.css
@@ -9,4 +9,5 @@
     margin-right: 40px;
     color: aliceblue;
     border: 1px solid rgb(0, 0, 0);
+    box-shadow: 10px 5px 5px rgb(160, 160, 160);
 }
