--- a/src/components/mercurial/CategorieCard.module.css
+++ b/src/components/mercurial/CategorieCard.module.css
@@ -5,8 +5,9 @@
     width: 250px;
     padding: 5px;
     height: 150px;
-    margin-bottom: 40px;
-    margin-right: 40px;
+    margin: 20px;
     color: aliceblue;
     border: 1px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px rgb(160, 160, 160);
 }
