--- a/src/features/mercurial/ListeAllergenesPage.module.css
+++ b/src/features/mercurial/ListeAllergenesPage.module.css
@@ -3,8 +3,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80%;
+    justify-content: center;
+    width: 98%;
     margin: auto;
+    margin-bottom: 40px;
 }
 
 .mercurial {
