--- a/src/features/mercurial/MercurialPage.module.css
+++ b/src/features/mercurial/MercurialPage.module.css
@@ -3,21 +3,29 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80%;
+    justify-content: center;
+    width: 98%;
     margin: auto;
-}
-
-.mercurial {
     margin-bottom: 40px;
 }
 
-.alignLeft {
-    text-align: left;
+.mercurialContainer2 {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 98%;
+    margin-bottom: 40px;
 }
 
-.alignRight {
-    text-align: right;
+.container {
+    position: relative;
+    margin: auto;
+    width: 98%;
+    margin-bottom: 40px;
 }
+
 
 .link {
     text-decoration: none;
