--- a/src/features/mercurial/liste-ingredients/ListeIngredientsParCategorie.module.css
+++ b/src/features/mercurial/liste-ingredients/ListeIngredientsParCategorie.module.css
@@ -31,6 +31,7 @@
     padding: 10px;
     width: 170px;
     align-content: center;
+    justify-content: center;
     border-radius: 10px;
     margin-bottom: 20px;
 }
