--- a/src/components/dashbord/card/DashboardCard.module.css
+++ b/src/components/dashbord/card/DashboardCard.module.css
@@ -4,9 +4,11 @@
     flex-direction: column;
     width: 300px;
     height: 200px;
-    padding: 10px;
+    padding: 15px;
     margin: 20px;
     justify-content: center;
+    border-radius: 15px;
+    box-shadow: 10px 5px 5px rgb(160, 160, 160);
 }
 
 .title {
