--- a/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
+++ b/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
@@ -39,3 +39,9 @@
     color: rgb(0, 39, 75);
     font-weight: bold;
 }
+
+.iconeSearch {
+    margin-top: 2px;
+    width: 20px;
+    height: 20px;
+}
