--- a/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
+++ b/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
@@ -1,4 +1,4 @@
-.mercurialContainer {
+.container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -17,31 +17,13 @@
     margin-bottom: 40px;
 }
 
-.mercurial {
-    margin-bottom: 40px;
-    border: 1px solid rgba(0, 0, 0, 0.39);
-    background-color: rgba(0, 0, 0, 0.39);
-}
-
-.th {
-    background-color: aliceblue;
-    border: 1px solid rgba(0, 0, 0, 0.39);  
-    border-radius: 5px; 
-}
-
-.alignLeft, .alignRight, .td {
-    background-color: aliceblue;
-    border: 1px solid rgba(0, 0, 0, 0.39);  
-}
-
 .link {
     position: relative;
     text-decoration: none;
     border: 1px solid rgb(0, 39, 75);
     padding: 10px;
-    width: 170px;
+    width: 240px;
     align-content: center;
-    justify-content: center;
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 5px;
@@ -50,16 +32,4 @@
 .link:visited {
     color: rgb(0, 39, 75);
     font-weight: bold;
-}
-
-.button {
-    width: 50px;
-    border: none;
-    background-color: transparent;
-}
-
-.iconeSearch {
-    margin-top: 2px;
-    width: 20px;
-    height: 20px;
 }
