--- a/src/features/mercurial/ListeAllergenesPage.module.css
+++ b/src/features/mercurial/ListeAllergenesPage.module.css
@@ -1,15 +1,21 @@
+.container {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 40px;
+}
+
 .mercurialContainer {
     position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width: 98%;
-    margin: auto;
+    width: 100%;
     margin-bottom: 40px;
 }
 
-.mercurialContainer2 {
+.searchContainer {
     position: relative;
     display: flex;
     flex-direction: row;
