--- a/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
+++ b/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
@@ -7,6 +7,16 @@
     margin: auto;
 }
 
+.searchContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 98%;
+    margin-bottom: 40px;
+}
+
 .mercurial {
     margin-bottom: 40px;
     border: 1px solid rgba(0, 0, 0, 0.39);
@@ -29,10 +39,11 @@
     text-decoration: none;
     border: 1px solid rgb(0, 39, 75);
     padding: 10px;
-    width: 170px;
+    width: 240px;
     align-content: center;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .link:visited {
