--- a/src/layout/sidebar-menu/SidebarMenu.module.css
+++ b/src/layout/sidebar-menu/SidebarMenu.module.css
@@ -1,20 +1,22 @@
 .sideBar {
-    height: 80% !important;
+    position: absolute;
     display: flex;
     flex-direction: column;
     border-right: 1px solid;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border-color: rgba(105, 120, 255, 0.774);
-    background-color: rgba(105, 120, 255, 0.774);
+    border-color: rgba(0, 0, 0, 0.774);
+    background-color: rgba(71, 89, 255, 0.774);
     transition: 0.8s ease;
+    margin-top: 10px;
+    z-index: 2;
 }
 
 .toggleMenu {
-    height: 60px;
+    height: 80px;
     border-top-right-radius: 10rem;
     border-bottom-right-radius: 9rem;
-    width: 15px;
+    width: 20px;
     position: absolute;
     outline: none;
     z-index: 1;
