--- a/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
+++ b/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
@@ -3,8 +3,19 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 80%;
+    width: 100%;
     margin: auto;
+}
+
+.linkTo {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 80px;
+    justify-content: left;
+    width: 80%;
+    padding-top: 20px;
 }
 
 .searchContainer {
@@ -14,6 +25,17 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 98%;
+    margin-bottom: 40px;
+}
+
+.ficheTechniqueContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 98%;
+    margin: auto;
     margin-bottom: 40px;
 }
 
