--- a/src/features/mercurial/liste-ingredients/ListeIngredientsParCategorie.module.css
+++ b/src/features/mercurial/liste-ingredients/ListeIngredientsParCategorie.module.css
@@ -1,10 +1,19 @@
-.mercurialContainer {
+.container {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 40px;
+} 
+
+.linkTo {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
+    padding-left: 80px;
+    justify-content: left;
     width: 80%;
-    margin: auto;
+    padding-top: 20px;
 }
 
 .searchContainer {
@@ -14,6 +23,17 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 98%;
+    margin-bottom: 40px;
+}
+
+.ingredientContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 98%;
+    margin: auto;
     margin-bottom: 40px;
 }
 
@@ -40,10 +60,7 @@
     border: 1px solid rgb(0, 39, 75);
     padding: 10px;
     width: 170px;
-    align-content: center;
-    justify-content: center;
     border-radius: 10px;
-    margin-top: 10px;
     margin-bottom: 5px;
 }
 
