--- a/src/components/fiches-techniques/categorie-card/creer/phase1/DebutFicheTechnique.module.css
+++ b/src/components/fiches-techniques/categorie-card/creer/phase1/DebutFicheTechnique.module.css
@@ -2,9 +2,60 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    text-align: left;
-    padding: 30px;
-    border: 1px solid black;
+    border: solid 2px gray;
     border-radius: 15px;
+    justify-content: left;
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin:auto;
+    margin-top: 40px;
+}
+
+.gridContainer {
+    display: grid;
+    grid: repeat(4, 70px) / auto-flow 320px;
+}
+
+.gridContainer > div {
+    width: 300px;
+    height: 50px;
+}
+
+.label {
+    position: relative;
+    display: block;
+    font-weight: bold;
+    margin-top: 12px;
+    padding-left: 5px;
+}
+
+.label::after {
+    content: ' :';
+}
+
+.input[type="text"], .input[type="number"] {
+    position: relative;
+    color: black;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 5px;
+    height: 40px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.buttonNext {
+    position: relative;
+    color: aliceblue;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 5px;
+    height: 40px;
+    width: 200px;
+    box-sizing: border-box;
+}
+
+.buttonNext {
+    background-color: rgb(110, 85, 85);
 }
