--- a/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
+++ b/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
@@ -39,6 +39,25 @@
     margin-bottom: 40px;
 }
 
+.fichePresentation {
+    margin-bottom: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.39);
+    background-color: rgba(0, 0, 0, 0.644);
+}
+
+.th {
+    padding: 5px;
+    background-color: rgb(0, 96, 121);
+    color: aliceblue;
+    border-radius: 2px; 
+}
+
+.alignLeft, .alignRight, .td {
+    background-color: aliceblue;
+    border: 1px solid rgba(0, 0, 0, 0.39);  
+    padding: 5px;
+}
+
 .link {
     position: relative;
     text-decoration: none;
