--- a/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
+++ b/src/features/mercurial/liste-allergenes/ListeAllergenesParCategorie.module.css
@@ -44,9 +44,10 @@
 }
 
 .th {
-    background-color: aliceblue;
-    border: 1px solid rgba(0, 0, 0, 0.39);  
-    border-radius: 5px; 
+    padding: 5px;
+    background-color: rgb(0, 96, 121);
+    color: aliceblue;
+    border-radius: 2px; 
 }
 
 .alignLeft, .alignRight, .td {
