--- a/src/layout/navigation-menu/NavigationBar.module.css
+++ b/src/layout/navigation-menu/NavigationBar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 60px;
     padding: 0 20px 0 30px;
-    background-color: rgb(112, 150, 255);
+    background-color: rgba(126, 70, 255, 0.87); /* rgb(112, 150, 255); */
     position: fixed;
     top: 0;
     width: 100%;
