--- a/src/layout/sidebar-menu/SideBarButton.module.css
+++ b/src/layout/sidebar-menu/SideBarButton.module.css
@@ -4,17 +4,23 @@
     padding-left: 20px;
     padding-right: 10px;
     /*color: rgba(48, 14, 14, 0.712);*/
-    color: aliceblue;
     text-decoration: none;
     cursor: pointer;
-    font-weight: bold;
     height: 60px;
     text-align: left;
     border-bottom: solid 1px rgb(0, 0, 0);
 }
 
+.text {
+    color: aliceblue;
+    font-weight: bold;
+}
+
 .navButton:hover {
-    color: rgb(255, 199, 136);
     text-decoration: none;
     cursor: pointer;
+}
+
+.navButton:hover .text {
+    color: rgb(255, 199, 136);
 }
