--- a/src/components/dashbord/card/DashboardCard.module.css
+++ b/src/components/dashbord/card/DashboardCard.module.css
@@ -8,6 +8,7 @@
     margin: 20px;
     justify-content: center;
     border-radius: 15px;
+    cursor: pointer;
     box-shadow: 10px 5px 5px rgb(160, 160, 160);
 }
 
