--- a/src/components/mercurial/CategorieAllergenesCard.module.css
+++ b/src/components/mercurial/CategorieAllergenesCard.module.css
@@ -5,6 +5,7 @@
     width: 250px;
     padding: 5px;
     height: 150px;
+    cursor: pointer;
     margin-bottom: 40px;
     margin-right: 40px;
     color: aliceblue;
