--- a/src/components/mercurial/CategorieCard.module.css
+++ b/src/components/mercurial/CategorieCard.module.css
@@ -6,6 +6,7 @@
     padding: 5px;
     height: 150px;
     margin: 20px;
+    cursor: pointer;
     color: aliceblue;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 20px;
