--- a/src/features/detail/DetailAllergene.module.css
+++ b/src/features/detail/DetailAllergene.module.css
@@ -17,18 +17,28 @@
     margin: auto;
 }
 
+.linkTo {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 80px;
+    justify-content: left;
+    width: 80%;
+    padding-top: 20px;
+}
+
 .link {
     position: relative;
     text-decoration: none;
-    border: 1px solid rgb(0, 39, 75);
+    border: 1px solid rgb(37, 37, 37);
     padding: 10px;
     width: 170px;
-    align-content: center;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .link:visited {
-    color: rgb(0, 39, 75);
+    color: rgb(37, 37, 37);
     font-weight: bold;
 }
