--- a/src/features/detail/DetailIngredient.module.css
+++ b/src/features/detail/DetailIngredient.module.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 80%;
+    width: 100%;
     margin: auto;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .container2 {
@@ -13,22 +13,34 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    justify-content: center;
+    width: 80%;
     margin: auto;
+    margin-bottom: 40px;
+}
+
+.linkTo {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 80px;
+    justify-content: left;
+    width: 80%;
+    padding-top: 20px;
 }
 
 .link {
     position: relative;
     text-decoration: none;
-    border: 1px solid rgb(0, 39, 75);
+    border: 1px solid rgb(37, 37, 37);
     padding: 10px;
     width: 170px;
-    align-content: center;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .link:visited {
-    color: rgb(0, 39, 75);
+    color: rgb(37, 37, 37);
     font-weight: bold;
 }
