--- a/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
+++ b/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
@@ -197,14 +197,10 @@ td {
     text-decoration: none;
     border: 1px solid rgb(37, 37, 37);
     padding: 10px;
-    width: 240px;
-    align-content: center;
+    width: 250px;
     border-radius: 10px;
-    margin-top: 10px;
     margin-bottom: 5px;
-}
-
-.link:visited {
-    color: rgb(37, 37, 37);
-    font-weight: bold;
+    font-weight: 600;
+    color:aliceblue;
+    background-color: rgba(73, 98, 211, 0.795);
 }
