--- a/src/features/mercurial/search/IngredientResearch.module.css
+++ b/src/features/mercurial/search/IngredientResearch.module.css
@@ -10,29 +10,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-left: 80px;
-    justify-content: left;
-    width: 80%;
+    margin:auto;
+    width: 90%;
     padding-top: 20px;
-}
-
-.searchContainer {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 40px;
 }
 
 .ingredientContainer {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    width: 98%;
+    width: 80%;
     margin: auto;
     margin-bottom: 40px;
 }
@@ -60,12 +49,32 @@
     text-decoration: none;
     border: 1px solid rgb(37, 37, 37);
     padding: 10px;
-    width: 250px;
+    width: 180px;
     border-radius: 10px;
     margin-bottom: 5px;
     font-weight: 600;
     color:aliceblue;
     background-color: rgba(73, 98, 211, 0.795);
+}
+
+.link2 {
+    position: relative;
+    text-decoration: none;
+    border: 1px solid rgb(37, 37, 37);
+    padding: 10px;
+    width: 180px;
+    margin-left: auto;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    font-weight: 600;
+    color:aliceblue;
+    background-color: rgba(73, 98, 211, 0.795);
+}
+
+.button {
+    width: 50px;
+    border: none;
+    background-color: transparent;
 }
 
 .iconeSearch {
