--- a/src/components/search-bar/ingredients/SearchIngredient.module.css
+++ b/src/components/search-bar/ingredients/SearchIngredient.module.css
@@ -1,13 +1,8 @@
 .searchContainer {
     position: relative;
-    width: 500px;
+    width: 700px;
     height: auto;
-}
-
-.searchBar {
-    display: flex;
-    flex-direction: row;
-    width: 100%;  
+    margin: auto;
 }
 
 .searchContainer input {
@@ -31,8 +26,26 @@
     outline: none;
 }
 
-.iconeSearch {
+.searchBar {
+    display: flex;
+    flex-direction: row;
+    width: 80%;  
+    margin: auto;
+}
+
+.button {
     position: relative;
-    float: right;
-    z-index: 2;
+    margin-top: 40px;
+    margin-left: 10px;
+    width: 50px;
+    background-color: rgb(255, 249, 223);
+    border-radius: 30px;
+}
+
+.buttonSearch {
+    vertical-align:middle;
+    height: 30px;
+    width: 30px;
+    margin-right: auto;
+    margin-left: auto;
 }
