--- a/src/features/mercurial/create/CreateIngredient.module.css
+++ b/src/features/mercurial/create/CreateIngredient.module.css
@@ -23,13 +23,10 @@
     text-decoration: none;
     border: 1px solid rgb(37, 37, 37);
     padding: 10px;
-    width: 170px;
-    align-content: center;
+    width: 180px;
     border-radius: 10px;
-    margin-bottom: 20px;
-}
-
-.link:visited {
-    color: rgb(37, 37, 37);
-    font-weight: bold;
+    margin-bottom: 5px;
+    font-weight: 600;
+    color:aliceblue;
+    background-color: rgba(73, 98, 211, 0.795);
 }
