css searchContainer margin-top change

--- a/src/components/search-bar/fiches-techniques/SearchFiche.module.css
+++ b/src/components/search-bar/fiches-techniques/SearchFiche.module.css
@@ -6,6 +6,7 @@
 }
 
 .searchContainer input {
+    margin-top : 40px;
     background-color: #e6e6e6;
     box-sizing: border-box;
     flex-grow: 2;
