--- a/src/components/etapes/creer/InitialiserEtape.module.css
+++ b/src/components/etapes/creer/InitialiserEtape.module.css
@@ -13,13 +13,14 @@
 }
 
 .gridContainer {
+    margin-top: 20px;
     display: grid;
-    grid: repeat(4, 70px) / auto-flow 270px;
+    grid: repeat(5, 100px) / auto-flow 270px;
 }
 
 .gridContainer > div {
     width: 250px;
-    height: 50px;
+    height: 70px;
 }
 
 .label {
@@ -38,10 +39,25 @@
     position: relative;
     color: black;
     border-radius: 15px;
-    text-align: center;
+    text-align: left;
+    padding-left: 10px;
     margin-top: 5px;
     height: 40px;
     width: 100%;
+    box-sizing: border-box;
+}
+
+.fieldDescription {
+    position:relative;
+    width:100%;
+    height:100%;
+    background-color: transparent;
+    color: black;
+    border: 1px #C4C4C4 solid;
+    border-radius: 15px;
+    padding:10px;
+    font: Source Sans Pro;
+    font-weight: 300;
     box-sizing: border-box;
 }
 
