--- a/src/components/search-bar/ingredients/SearchIngredient.module.css
+++ b/src/components/search-bar/ingredients/SearchIngredient.module.css
@@ -1,6 +1,6 @@
 .searchContainer {
     position: relative;
-    width: 700px;
+    width: 900px;
     height: auto;
     margin: auto;
 }
@@ -38,7 +38,9 @@
     position: relative;
     margin-top: 40px;
     margin-left: 10px;
-    width: 50px;
+    width: 320px;
+    color: black;
+    font-weight: 600;
     background-color: rgb(255, 249, 223);
     border-radius: 30px;
 }
