--- a/src/features/mercurial/search/IngredientResearch.module.css
+++ b/src/features/mercurial/search/IngredientResearch.module.css
@@ -42,6 +42,7 @@
 .alignLeft, .alignRight, .td {
     background-color: aliceblue;
     border: 1px solid rgba(0, 0, 0, 0.39);  
+    padding: 5px;
 }
 
 .link {
