--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,24 @@
   padding-top: 10px;
   padding-bottom: 15px;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 15px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(70, 73, 255, 0.87);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(53, 56, 255, 0.87);
+}
