--- a/src/features/parameter/Parameters.module.css
+++ b/src/features/parameter/Parameters.module.css
@@ -25,6 +25,12 @@
     background-color: rgb(233, 233, 233);
 }
 
+.icone {
+    font-size: 20px;
+    padding-top: 22px;
+    padding-right: 7px;
+}
+
 .row {
     position: relative;
     display: flex;
