[Fiche Technique] affichage du nom des responsables/début affichage coût sur une fiche technique + [Ingrédient] Affichage allergène ou non

--- a/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
+++ b/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
@@ -36,18 +36,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width: 60%;
+    width: calc(60% - 1px);
 }
 
 .table1 {
     position: relative;
-    width: 40%;
-    border-right: 2px black solid;
+    width: calc(40% - 1px);
+    border-right: 1px black solid;
 }
 
 .table2 {
     position: relative;
     width: 60%;
+    border-left: 1px black solid;
 }
 
 thead {
@@ -85,6 +86,23 @@ thead {
 
 .techniques3 {
     text-align: justify;
+}
+
+
+.left, .right {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: justify;
+}
+
+.left {
+    width: calc(100% - 20px);
+    border-right: 1px solid black;
+}
+
+.right {
+    width: calc(100% - 20px);
+    border-left: 1px solid black;
 }
 
 .techniques4 {
@@ -174,12 +192,20 @@ td {
     border-right: 1px black solid;
 }
 
+.gridCout {
+    position: relative;
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+}
+
 .linkTo {
     position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin:auto;
+    margin-bottom: 20px;
     width: 90%;
     padding-top: 20px;
 }
@@ -207,6 +233,15 @@ td {
     padding: 5px;
 }
 
+.title3 {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(190, 190, 190, 0.781);
+    border-bottom: 1px black solid;
+    border-left: 1px black solid;
+}
+
 .link {
     position: relative;
     text-decoration: none;
@@ -218,6 +253,82 @@ td {
     font-weight: 600;
     color:aliceblue;
     background-color: rgba(73, 98, 211, 0.795);
+}
+
+/* Toggle Switch Button */
+.containerSwitch {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.switchContainer {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+  
+.switch input { 
+    cursor: pointer;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+  
+  /* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
 }
 
 .link2 {
@@ -239,10 +350,10 @@ td {
         width: 95%;
     }
 
-    .page-break {
+    .grid-cout {
       margin-top: 1rem;
       display: block;
-      page-break-before: auto;
+      page-break-before: always;
     }
 
     @page {
