--- a/src/components/stocks/dashboard/StockDashboard.module.css
+++ b/src/components/stocks/dashboard/StockDashboard.module.css
@@ -16,8 +16,10 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    min-height: 380px;
     margin: auto;
     margin-bottom: 20px;
+    align-items: center;
     justify-content: center;
     color: aliceblue;
 }
