--- a/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
+++ b/src/features/fichestechniques/detail/FicheTechniqueDetail.module.css
@@ -331,7 +331,7 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-.link2 {
+.link2, .deleteButton {
     position: relative;
     text-decoration: none;
     border: 1px solid rgb(37, 37, 37);
@@ -342,7 +342,14 @@ input:checked + .slider:before {
     margin-bottom: 5px;
     font-weight: 600;
     color:aliceblue;
+}
+
+.link2 {
     background-color: rgba(94, 48, 30, 0.795);
+}
+
+.deleteButton {
+    background-color: rgb(172, 63, 63);
 }
 
 @media print {
