--- a/src/features/fichestechniques/phase/view/PhaseView.module.css
+++ b/src/features/fichestechniques/phase/view/PhaseView.module.css
@@ -72,7 +72,14 @@
     margin: auto;
 }
 
-.button {
+.gridButton {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.button, .buttonDelete {
     position: relative;
     color: aliceblue;
     border-radius: 15px;
@@ -81,5 +88,13 @@
     height: 40px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.button {
     background-color: rgb(63, 49, 49);
+}
+
+.buttonDelete {
+    margin-left: 10px;
+    background-color: rgb(172, 63, 63);
 }
