--- a/src/components/mercurial/CategorieCard.module.css
+++ b/src/components/mercurial/CategorieCard.module.css
@@ -4,11 +4,30 @@
     flex-direction: column;
     width: 250px;
     padding: 5px;
-    height: 150px;
+    height: 160px;
     margin: 20px;
-    cursor: pointer;
     color: aliceblue;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 20px;
     box-shadow: 10px 5px 5px rgb(160, 160, 160);
+}
+
+.gridContainer {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(40px, auto);
+}
+
+.h3 {
+    margin-top: 15px;
+}
+
+.icone {
+    cursor: pointer;
+    margin-left: 40px;
+    margin-right: 40px;
+    width: 40px;
+    height: 40px;
+    color: rgb(0, 0, 0);
 }
