[Categories] fin modif allergene et ingredient pour les catégories

--- a/src/components/mercurial/CategorieAllergenesCard.module.css
+++ b/src/components/mercurial/CategorieAllergenesCard.module.css
@@ -4,12 +4,11 @@
     flex-direction: column;
     width: 250px;
     padding: 5px;
-    height: 150px;
-    cursor: pointer;
-    margin-bottom: 40px;
-    margin-right: 40px;
+    height: 160px;
+    margin: 20px;
     color: aliceblue;
     border: 1px solid rgb(0, 0, 0);
+    border-radius: 20px;
     box-shadow: 10px 5px 5px rgb(160, 160, 160);
 }
 
