--- a/src/components/stocks/etiquette/FicheTechniqueChoice.module.css
+++ b/src/components/stocks/etiquette/FicheTechniqueChoice.module.css
@@ -6,20 +6,32 @@
     border-radius: 15px;
     justify-content: left;
     text-align: left;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0px 20px 20px 20px;
+    width: 650px;
     margin:auto;
     margin-top: 40px;
 }
 
 .gridContainer {
     display: grid;
-    grid: repeat(5, 70px) / auto-flow 320px;
+    grid: repeat(1, 70px) / auto-flow 310px;
 }
 
 .gridContainer > div {
-    width: 300px;
+    width: 220px;
     height: 50px;
+}
+
+.gridContainer2 {
+    display: grid;
+    grid: repeat(1, 340px) / auto-flow 310px;
+}
+
+.gridContainer2 > div {
+    width: 290px;
+    height: 300px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .label {
@@ -34,7 +46,7 @@
     content: ' :';
 }
 
-.input[type="text"], .input[type="number"], .input {
+.input[type="text"], .input[type="number"] {
     position: relative;
     color: black;
     border-radius: 15px;
@@ -43,6 +55,31 @@
     height: 40px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.list {
+    position: relative;
+    padding: 8px;
+    font-size: 15px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    overflow-x: none;
+}
+
+.add {
+    font-size: 15px;
+    color: green;
+}
+
+.click {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.link {
+    text-decoration: none;
 }
 
 .buttonNext {
@@ -54,8 +91,10 @@
     height: 40px;
     width: 100%;
     box-sizing: border-box;
+    background-color: rgb(110, 85, 85);
 }
 
-.buttonNext {
-    background-color: rgb(110, 85, 85);
+.legend {
+    color:rgb(116, 116, 116);
+    font-size: 10px;
 }
