--- a/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
+++ b/src/features/fichestechniques/categorie/FicheTechniqueCategory.module.css
@@ -58,6 +58,18 @@
     padding: 5px;
 }
 
+.td2 {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(3, auto);
+    align-items: center;
+    box-sizing: border-box;
+    background-color: aliceblue;
+    border: 1px solid rgba(0, 0, 0, 0.39);  
+    padding: 10px;
+}
+
 .link {
     position: relative;
     text-decoration: none;
