[Icons] retirer des icones pour voir si le bug heroku est résolu

--- a/src/components/stocks/etiquette/FicheTechniqueChoice.module.css
+++ b/src/components/stocks/etiquette/FicheTechniqueChoice.module.css
@@ -67,8 +67,13 @@
 }
 
 .add {
-    font-size: 15px;
-    color: green;
+    font-size: 12px;
+    padding-left: 3px;
+    padding-right: 3px;
+    background-color: green;
+    vertical-align:text-top;
+    border-radius: 10px;
+    color: aliceblue;
 }
 
 .click {
