--- a/src/components/etapes/creer/choix-ingredients/IngredientChoice.module.css
+++ b/src/components/etapes/creer/choix-ingredients/IngredientChoice.module.css
@@ -84,8 +84,13 @@
 }
 
 .add {
-    font-size: 14px;
-    color: green;
+    font-size: 12px;
+    padding-left: 3px;
+    padding-right: 3px;
+    background-color: green;
+    vertical-align:text-top;
+    border-radius: 10px;
+    color: aliceblue;
 }
 
 .click {
